# BookStore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_word.html  hello_world.html
order/: factories.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/templates/order/: welcome.html
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
