[project]
name = "bookstore"
version = "0.1.0"
description = "bookstore API"
authors = [
    {name = "Emerson Teixeira",email = "emerson@exemplo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "factory-boy (>=3.3.3,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.10.0"
pytest = "^8.3.5"

